# AnimalPoseTracker

./: README.md  frame0.json  output.avi  pyproject.toml
animalposetracker/: __init__.py  version.py
animalposetracker/cfg/: __init__.py  default.yaml
animalposetracker/cfg/defaultconfigs/mmpose/animal_2d_keypoint/rt/ap10k/: simcc_mobilenetv2_wo-deconv-8xb64-210e_ap10k-640x640.py
animalposetracker/cfg/defaultconfigs/ultralytics/models/fly/: spipose.yaml
animalposetracker/cores/: tasks.py
animalposetracker/data/: __init__.py  annotator.py  dataset.py
animalposetracker/data/extraction/: frame_extraction.py
animalposetracker/data/labeled/: __init__.py
animalposetracker/engine/: __init__.py  base.py  basetrack.py  bot_sort.py  byte_tracker.py  constant.py  gmc.py  inferencer.py  kalman_filter.py  matching.py  model.py  tracker.py  utils.py
animalposetracker/gui/: ConfigureEditor.ui  __init__.py  animalposeinference.py  animalposeinference.ui  animalposetracker.py  animalposetracker.ui  animalposetracker_page.ui  annotatorpage.py  annotatorpage__.py  createnewproject.ui  createnewprojectpage.py  inferencepage.py  inferencerpage.py  mainpage.py  publicdatasetsproject.ui  publicdatasetsprojectpage.py  resources.qrc  test.py  ui_animalposeannotator.py  ui_animalposeinference.py  ui_animalposetracker.py  ui_annotator.py  ui_createnewproject.py  ui_inferencer.py  ui_publicdatasetsproject.py  ui_tracker.py  utils.py
animalposetracker/gui/style/: dark.qss  light.qss
animalposetracker/gui/ui/: animalposeannotator.ui  animalposeinference.ui  animalposetracker.ui  annotator.ui  createnewproject.ui  inferencer.ui  publicdatasetsproject.ui  tracker.ui  ui_animalposeannotator.py  ui_animalposeinference.py  ui_animalposetracker.py
animalposetracker/projector/: __init__.py  animalposeproject.py  animalposetracker_page.ui  base.py  new_project.py
animalposetracker/tools/annotator/: dataset.py
animalposetracker/tools/inferencer/: __init__.py  animalposeinference.py  animalposeinference.ui  inferencer.py  ui_animalposeinference.py
animalposetracker/utils/: __init__.py  base.py  dataset.py  extract_frame.py  preview_thread.py  videoprocessthread.py  visualize.py
docs/animalposetracker/: mkdocs.yml
