# Project metadata with author information
[project]
name = "animalposetracker"
version = "0.1.0"
description = "Animal Pose Estimation and Tracking Toolkit"
authors = [{name = "Wu X.", email = "wux024@nenu.edu.cn"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

# Build system requirements
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Main dependencies (aligned with your pip list)
dependencies = [
    # Core dependencies
    "numpy>=1.26.4",
    "opencv-contrib-python>=4.11.0",
    "opencv-python>=4.11.0",
    
    # GUI framework
    "PySide6>=6.8.2",
    
    # Camera/device control
    "depthai>=2.24.0",
    "PyCameraList>=1.0.0",
    "pyusb>=1.2.1",
    
    # Data processing
    "comtypes>=1.4.10",
    "PyYAML>=6.0.2",
    "ruamel.yaml>=0.18.6",
    
    # ROS integration
    "rosbags>=0.9.11",
    "mcap>=1.1.1",
    "mcap-ros1-support>=0.0.8",
    
    # Utilities
    "ffmpy3>=0.2.4",
    "lz4>=4.3.3",
    "zstandard>=0.23.0"
]

# Optional dependency groups
[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8>=6.1.0",
    "pytest>=8.0.0"
]
full = [
    "tensorflow>=2.8",  # For advanced pose estimation
    "pandas>=1.3",      # For data analysis
    "matplotlib>=3.5"   # For visualization
]

# Package discovery configuration
[tool.setuptools]
packages = ["animalposetracker"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
animalposetracker = [
    "assets/logo_transparent.png",
    "assets/logo.png",
    "assets/welcome.png",
    "assets/icons/help.png",
    "assets/icons/help2.png",
    "assets/icons/new_project.png",
    "assets/icons/new_project2.png",
    "assets/icons/open.png",
    "assets/icons/save.png",
    "media/dlc_1-01.png",
    "media/logo.png",
]

[tool.setuptools.exclude-package-data]
animalposetracker = [
    "​**​/*.ui",              
    "​**​/__pycache__/*"
]

# Entry points (if creating CLI tools)
[project.scripts]
animalpose-inferencer = "animalposetracker.tools.inferencer.animalposeinference:run"