# Project metadata with author information

# Build system requirements
[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project information
[project]
name = "animalposetracker"
dynamic = ["version"]
description = "Animal Pose Estimation and Tracking Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { "text" = "AGPL-3.0" }
keywords = ["animal pose estimation", "computer vision", "neuroscience"]
authors = [{name = "Wu X.", email = "wux024@nenu.edu.cn"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Neuroscience",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

# Main dependencies (aligned with your pip list)
dependencies = [
    "PySide6>=6.8.0",
    "PyCameraList>=1.0.0",
    "numpy>=1.23.0",
    "matplotlib>=3.3.0",
    "opencv-python>=4.6.0",
    "opencv-contrib-python>=4.6.0",
    "pillow>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "py-cpuinfo", 
    "scikit-learn>=1.3.2", 
    "onnxruntime>=1.10.0",
    "tqdm>=4.64.0",
]


# Package discovery configuration
[tool.setuptools]
packages = ["animalposetracker"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
animalposetracker = [
    "assets/logo_transparent.png",
    "assets/logo.png",
    "assets/welcome.png",
    "assets/icons/help.png",
    "assets/icons/help2.png",
    "assets/icons/new_project.png",
    "assets/icons/new_project2.png",
    "assets/icons/open.png",
    "assets/icons/save.png",
    "media/dlc_1-01.png",
    "media/logo.png",
    "style/dark.qss",
    "style/light.qss"  
]

[tool.setuptools.dynamic]
version = { attr = "animalposetracker.__version__" }

[tool.setuptools.exclude-package-data]
animalposetracker = [
    "​**​/*.ui",              
    "​**​/__pycache__/*"
]

# Entry points (if creating CLI tools)
[project.scripts]
"animalposetracker" = "animalposetracker.gui.mainpage:main"
"animalpose-inferencer" = "animalposetracker.gui.inferencerpage:main"
"animalpose-annotator" = "animalposetracker.gui.annotatorpage:main"
